added an unnumbered list

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <h1>WebGameDev</h1>
     <p>Here is a paragraph about the course<p>
+    <ul>
+        <li>Some item</li>
+        <li>Some item 2</li>
+    </ul>
 </body>
 </html>
